--- a/HW23/index.html
+++ b/HW23/index.html
@@ -6,34 +6,22 @@
     <title>HW23</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/styles.css">
-    <script src="main.js"></script>
+    <script type='module' src="main.js"></script>
 </head>
 <body>
     <div class="container">
         <form id="form">
             <div id="inputs">
                 <label for="email">Email</label>
-                <input type="email" class="form-control" id="email">
-                <div id="invalid-email" class="invalid-feedback">
-                    Неправильный формат email
-                </div>
+                <input type="email" class="form-control" name="email">
                 <label for="name">Имя</label>
-                <input type="text" class="form-control" id="name">
-                <div id="invalid-name" class="invalid-feedback">
-                    Введите имя
-                </div>
+                <input type="text" class="form-control" name="name">
                 <label for="password">Пароль</label>
-                <input type="password" class="form-control" id="password">
-                <div id="invalid-password" class="invalid-feedback">
-                    Пароль должен быть от 6 символов
-                </div>
+                <input type="new-password" class="form-control" name="password">
                 <label for="repeat-password">Повторение пароля</label>
-                <input type="password" class="form-control" id="repeat-password">
-                <div id="invalid-repeat-password" class="invalid-feedback">
-                    Пароли не совпадают
-                </div>
+                <input type="new-password" class="form-control" name="repeatPassword">
             </div>
-            <button type="button" class="btn btn-primary" id="btn-submit">Зарегистрироваться</button>
+            <button type="button" class="btn btn-primary" id="btn-submit" disabled>Зарегистрироваться</button>
         </form>
     </div>
 </body>
