--- a/HW23/index.html
+++ b/HW23/index.html
@@ -21,7 +21,7 @@
                 <label for="repeat-password">Повторение пароля</label>
                 <input type="new-password" class="form-control" name="repeatPassword">
             </div>
-            <button type="button" class="btn btn-primary" id="btn-submit" disabled>Зарегистрироваться</button>
+            <button type="submit" class="btn btn-primary" id="btn-submit" disabled>Зарегистрироваться</button>
         </form>
     </div>
 </body>
