--- a/HW27/public/index.html
+++ b/HW27/public/index.html
@@ -12,6 +12,8 @@
 <body>
     <div id="controls">
         <button id="add" type="button" class="registerbtn">Add User</button>
+        <button id="delete" type="button" class="registerbtn">Delete User</button>
+        <button id="put" type="button" class="registerbtn">Upgrade User</button>
         <button id="get" type="button" class="registerbtn">Get Users List</button>
     </div>
 
@@ -33,6 +35,39 @@
 
             <p>By creating an account you agree to our <a href="#">Terms & Privacy</a>.</p>
             <button type="submit" class="registerbtn">Register</button>
+        </div>
+    </form>
+
+    <form action="action_page.php" id="delForm">
+        <div class="container">
+            <h1>Delete user</h1>
+            <p>Please fill in email to delete user</p>
+            <hr>
+
+            <label for="email"><b>Email</b></label>
+            <input type="text" placeholder="Enter Email" name="email" required>
+
+            <button type="submit" class="registerbtn">Delete</button>
+        </div>
+    </form>
+
+    <form action="action_page.php" id="putForm">
+        <div class="container">
+            <h1>Upgrade user</h1>
+            <p>Please fill in this form to update information.</p>
+            <hr>
+
+            <label for="email"><b>Name</b></label>
+            <input type="text" placeholder="Enter Email" name="name" required>
+
+            <label for="email"><b>Email</b></label>
+            <input type="text" placeholder="Enter Email" name="email" required>
+
+            <label for="psw"><b>Password</b></label>
+            <input type="password" placeholder="Enter Password" name="password" required>
+            <hr>
+
+            <button type="submit" class="registerbtn">Update</button>
         </div>
     </form>
 
