--- a/HW27/public/index.html
+++ b/HW27/public/index.html
@@ -41,11 +41,11 @@
     <form action="action_page.php" id="delForm">
         <div class="container">
             <h1>Delete user</h1>
-            <p>Please fill in email to delete user</p>
+            <p>Please fill in userId to delete user</p>
             <hr>
 
-            <label for="email"><b>Email</b></label>
-            <input type="text" placeholder="Enter Email" name="email" required>
+            <label for="delte"><b>User Id</b></label>
+            <input type="text" placeholder="Enter User ID" name="delete" required>
 
             <button type="submit" class="registerbtn">Delete</button>
         </div>
@@ -57,14 +57,17 @@
             <p>Please fill in this form to update information.</p>
             <hr>
 
-            <label for="email"><b>Name</b></label>
-            <input type="text" placeholder="Enter Email" name="name" required>
+            <label for="name"><b>Name</b></label>
+            <input type="text" placeholder="Enter Name" name="name" required>
 
             <label for="email"><b>Email</b></label>
             <input type="text" placeholder="Enter Email" name="email" required>
 
             <label for="psw"><b>Password</b></label>
             <input type="password" placeholder="Enter Password" name="password" required>
+
+            <label for="put"><b>User Id</b></label>
+            <input type="text" placeholder="Enter User Id" name="put" required>
             <hr>
 
             <button type="submit" class="registerbtn">Update</button>
