--- a/HW27/public/index.html
+++ b/HW27/public/index.html
@@ -66,8 +66,8 @@
             <label for="psw"><b>Password</b></label>
             <input type="password" placeholder="Enter Password" name="password" required>
 
-            <label for="put"><b>User Id</b></label>
-            <input type="text" placeholder="Enter User Id" name="put" required>
+            <label for="userId"><b>User Id</b></label>
+            <input type="text" placeholder="Enter User Id" name="userId" required>
             <hr>
 
             <button type="submit" class="registerbtn">Update</button>
