--- a/HW28/index.html
+++ b/HW28/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HW28</title>
+    <link rel="stylesheet" href="./css/style.css">
     <script src="./main.js"></script>
 </head>
 <body>
+    
     <alert-component type="error" message="У вас ошибка" ></alert-component>
+
     <button id="btn">Изменить посыл</button>
 
 </body>
