--- a/HW27/public/index.html
+++ b/HW27/public/index.html
@@ -74,7 +74,12 @@
         </div>
     </form>
 
-    <div class="users" id="users"></div>
+    <div class="users-wrap">
+        <div class="users" id="users"></div>
+        <div class="users-controll"></div>
+        <div class="upd-form-wrap"></div>
+    </div>
+
 
 </body>
 
